--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "canvg": "^4.0.2",
+    "color-convert": "^2.0.1",
     "d3-scale": "^4.0.2",
     "date-holidays": "^3.23.18",
     "dom-to-image-more": "^3.5.0",
